# miniz-cpp

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  miniz-cpp-config.cmake  miniz.c  miniz_cpp.hpp  pipe.cpp  read.cpp  test.cpp  write.cpp  zip.hpp  zip_file.cpp  zip_file.hpp
examples/: CMakeLists.txt  pipe.cpp  read.cpp  write.cpp
tests/: CMakeLists.txt  test.cpp
